# geetar-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: MODELS.md
scripts/: check.py  deploy.sh
src/geetar_agent/: __init__.py  config.py  main.py
src/geetar_agent/api/: chat.py  health.py
src/geetar_agent/llm/: client.py
tests/: test_chat.py  test_health.py
