[project]
name = "geetar-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zhaomeng", email = "171462271@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
geetar-agent = "geetar_agent:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
