[project]
name = "geetar-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zhaomeng", email = "171462271@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.1",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
geetar-agent = "geetar_agent:main"
check = "geetar_agent.scripts.check:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.19",
]

# ──────────────────────────────────────────────────────────────────────────
# 工具配置
# ──────────────────────────────────────────────────────────────────────────

[tool.ruff]
# 目标 Python 版本（ruff 据此调整 lint 规则，比如 3.12 支持 match）
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
# 启用的规则集（每个字母是一个规则系列，详见下方注释）
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes（未使用变量、未定义引用等）
    "I",    # isort（import 排序）
    "B",    # flake8-bugbear（容易踩坑的写法）
    "UP",   # pyupgrade（提示用新语法）
    "SIM",  # flake8-simplify（写法可以更简洁）
    "RUF",  # ruff 专属规则
]
ignore = [
    "E501",   # 行宽超限交给 formatter 决定
    "RUF001", # 中文全角字符（字符串字面量），中文项目里属于正常用法
    "RUF002", # 中文全角字符（docstring）
    "RUF003", # 中文全角字符（注释）
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # 测试里允许用 assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true                          # 严格模式（推荐新项目从严开始）
exclude = ["^\\.venv/", "^build/"]
plugins = ["pydantic.mypy"]            # Pydantic 模型类型推断更准

# 第三方库没类型注解时不报错（不是所有库都有完整 type stubs）
[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",                 # 报告所有非 pass 结果（错误、跳过、xfail 等）
    "--strict-markers",    # 用未声明的 marker 直接报错
    "--strict-config",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
